Attempt at fixing overflow

--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -126,6 +126,6 @@ button {
 
 .descText {
     font-size: 15px;
-    overflow: scroll;
+    overflow: hidden;
     height: 120px;
 }
